# debasher

./: .readthedocs.yaml  Makefile.am  README.md  configure.ac  index.html
data/: Makefile.am  debasher_check_installation.sh
data/conda_envs/: Makefile.am
data/programs/: debasher_array_example.sh  debasher_conda_example.sh  debasher_counter.sh  debasher_cycle.sh  debasher_cycle_dyn_sched.sh  debasher_cycle_state.sh  debasher_cycle_trigger_interactive.sh  debasher_docker_example.sh  debasher_dynamic_fanout.sh  debasher_dynamic_fanout_fifos.sh  debasher_dynamic_fanout_parallel.sh  debasher_dynamic_fanout_taskdone.sh  debasher_echo.sh  debasher_explicit_deps_example.sh  debasher_fifo_example.sh  debasher_file_example.sh  debasher_generator_example.sh  debasher_hello_world.sh  debasher_hello_world_alias.sh  debasher_hello_world_ext_alias.sh  debasher_hello_world_groovy.sh  debasher_hello_world_perl.sh  debasher_hello_world_py.sh  debasher_hello_world_r.sh  debasher_host_process.sh  debasher_host_process_expl_deps.sh  debasher_host_process_light.sh  debasher_host_process_medium.sh  debasher_host_workflow.sh  debasher_host_workflow_expl_deps.sh  debasher_host_workflow_force.sh  debasher_host_workflow_light.sh  debasher_host_workflow_medium.sh  debasher_net_reconf_1.sh  debasher_net_reconf_2.sh  debasher_shared_dir_example.sh  debasher_simple_process.sh  debasher_skip_example.sh  debasher_subprogram_example.sh  debasher_telegram.sh  (+6 more)
examples/: Makefile.am  debasher_check_installation.sh  pipe_software_test.ppl
examples/conda_envs/: py27.yml
examples/pipelines/: Makefile.am  panpipe_array_example.sh  panpipe_conda_example.sh  panpipe_cycle.sh  panpipe_docker_example.sh  panpipe_explicit_deps_example.sh  panpipe_fifo_example.sh  panpipe_host_process.sh  panpipe_host_process_expl_deps.sh  panpipe_host_workflow.sh  panpipe_host_workflow_expl_deps.sh  panpipe_shared_dir_example.sh  panpipe_simple_process.sh  panpipe_skip_example.sh  panpipe_software_test.ppl  panpipe_software_test.sh  panpipe_subworkflow_example.sh  panpipe_telegram.sh  panpipe_telegram_dc_rc.sh  panpipe_telegram_fifo.sh  panpipe_telegram_files.sh  panpipe_telegram_files_dyn.sh  panpipe_telegram_files_imperative.sh  panpipe_telegram_files_seqmode.sh  panpipe_telegram_imperative.sh  panpipe_telegram_jobsteps.sh  panpipe_telegram_morrison.sh  panpipe_value_pass.sh
examples/ppl_files/: Makefile.am  panpipe_software_test.ppl  pipe_software_test.ppl
examples/programs/: Makefile.am  debasher_array_example.sh  debasher_conda_example.sh  debasher_counter.sh  debasher_cycle.sh  debasher_cycle_dyn_sched.sh  debasher_cycle_state.sh  debasher_cycle_trigger_interactive.sh  debasher_docker_example.sh  debasher_dynamic_fanout.sh  debasher_dynamic_fanout_fifos.sh  debasher_dynamic_fanout_parallel.sh  debasher_dynamic_fanout_taskdone.sh  debasher_echo.sh  debasher_explicit_deps_example.sh  debasher_fifo_example.sh  debasher_file_example.sh  debasher_hello_world.sh  debasher_hello_world_alias.sh  debasher_hello_world_alias_extern.sh  debasher_hello_world_alias_func.sh  debasher_hello_world_ext_alias.sh  debasher_hello_world_groovy.sh  debasher_hello_world_perl.sh  debasher_hello_world_py.sh  debasher_hello_world_r.sh  debasher_host_process.sh  debasher_host_process_expl_deps.sh  debasher_host_process_light.sh  debasher_host_process_medium.sh  debasher_host_workflow.sh  debasher_host_workflow_expl_deps.sh  debasher_host_workflow_light.sh  debasher_host_workflow_medium.sh  debasher_net_reconf_1.sh  debasher_net_reconf_a.sh  debasher_net_reconf_b.sh  debasher_shared_dir_example.sh  debasher_simple_process.sh  debasher_skip_example.sh  (+32 more)
rtdocs/: generate_api_files.sh  tomdoc.sh
rtdocs/source/: api.rst  api_cmdline_opts.rst  api_mod_conf.rst  api_mod_def.rst  api_opts.rst  api_proc_exec_opts.rst  api_proc_impl.rst  api_proc_opts.rst  api_prog_def.rst  array.rst  conda.rst  conf.py  cycle.rst  docker.rst  exec.rst  explicit_deps.rst  fifo.rst  fwriter_freader.rst  generator.rst  getstart.rst  implem.rst  index.rst  intro.rst  links.rst  run.rst  skip.rst  subprogram.rst  value_pass.rst
rtdocs/source/_static/css/: styles.css
utils/: Makefile.am  db_get_reexec_procs_due_to_deps.py  db_get_rerun_procs_due_to_deps.py  debasher_builtin_sched_lib.sh  debasher_check.py  debasher_check_prg_files.py  debasher_compare_opts.py  debasher_doc_mod.sh  debasher_exec.sh  debasher_exec_batch.sh  debasher_exec_process.sh  debasher_fifo_writer_loop.sh  debasher_gen_knapsack_problem.py  debasher_gen_telegram_data.py  debasher_get_deblib_vars_and_funcs.sh  debasher_get_out.sh  debasher_get_sched_out.sh  debasher_get_stdout.sh  debasher_get_vars_and_funcs.sh  debasher_knapsack_ga.py  debasher_lib.sh  debasher_lib_conda.sh  debasher_lib_docker.sh  debasher_lib_modules.sh  debasher_lib_opts.sh  debasher_lib_process_spec.sh  debasher_lib_processes.sh  debasher_lib_programs.sh  debasher_lib_sched.sh  debasher_lib_sched_builtin.sh  debasher_lib_sched_procs.sh  debasher_lib_sched_rerun.sh  debasher_lib_sched_slurm.sh  debasher_lib_sched_topo_sort.sh  debasher_lib_utils.sh  debasher_list_deblib_pub_funcs.sh  debasher_prg_lib.py  debasher_proc_dataset.sh  debasher_process_debug.sh  debasher_reformat_status.py  (+59 more)
