pplfilesdir = $(datadir)/$(PACKAGE)/pipelines
pplfiles_DATA= panpipe_simple_process.sh panpipe_value_pass.sh	\
panpipe_fifo_example.sh panpipe_shared_dir_example.sh		\
panpipe_array_example.sh panpipe_skip_example.sh		\
panpipe_conda_example.sh panpipe_docker_example.sh		\
panpipe_subworkflow_example.sh panpipe_explicit_deps_example.sh	\
panpipe_telegram_morrison.sh panpipe_telegram.sh		\
panpipe_telegram_jobsteps.sh panpipe_telegram_imperative.sh	\
panpipe_host_process.sh panpipe_host_process_expl_deps.sh	\
panpipe_host_workflow.sh panpipe_host_workflow_expl_deps.sh	\
panpipe_cycle.sh

EXTRA_DIST= $(pplfiles_DATA)
