prgfilesdir = $(datadir)/$(PACKAGE)/programs
prgfiles_DATA= debasher_hello_world.sh debasher_simple_process.sh	\
debasher_value_pass.sh debasher_file_example.sh				\
debasher_fifo_example.sh debasher_shared_dir_example.sh			\
debasher_array_example.sh debasher_generator_example.sh			\
debasher_skip_example.sh debasher_conda_example.sh			\
debasher_docker_example.sh debasher_subprogram_example.sh		\
debasher_explicit_deps_example.sh debasher_telegram_morrison.sh		\
debasher_telegram.sh debasher_telegram_jobsteps.sh			\
debasher_telegram_array.sh debasher_telegram_imperative.sh		\
debasher_host_process.sh debasher_host_process_expl_deps.sh		\
debasher_host_workflow.sh debasher_host_workflow_expl_deps.sh		\
debasher_cycle.sh debasher_net_reconf_a.sh debasher_net_reconf_b.sh

EXTRA_DIST= $(prgfiles_DATA)
